[tool.flake8]
max-line-length = 120

[tool.poetry]
name = "gdq"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Nathaniel Case <this.is@nathanielca.se>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.1"
requests = "^2.24.0"
toml = "^0.10.1"
xdg = "^4.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gdq = "gdq.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
