[project]
name = "gdq-cli"
version="1.1"
requires-python = ">=3.11"
dependencies = [
    "pubnub",
    "requests",
    "xdg",
]

[project.scripts]
gdq = "gdq.__main__:main"
bus = "bus.__main__:main"

[tool.ruff]
fix = true
line-length = 120
builtins = ["__"]
select = ["ALL"]
ignore = ["ANN", "D", "T201"]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.setuptools.packages.find]
exclude = ["tests"]
